feat: Production-ready security and infrastructure
Security:
- CORS configuration with environment-based restrictions
- CSRF protection middleware (Origin/Referer validation + double-submit cookie)
- HTTPS enforcement middleware
- Security headers (HSTS, X-Frame-Options, X-Content-Type-Options, CSP)
- Mandatory secrets in production (JWT_SECRET, CSRF_SECRET, CORS_ORIGINS)

Infrastructure:
- Database migration system with SQLx
- Initial schema migrations (8 core tables + 4 compliance tables)
- Graceful shutdown with signal handling
- Detailed health checks (/health/detail, /health/ready, /health/live)
- Kubernetes-ready liveness/readiness probes

CI/CD:
- Complete GitHub Actions workflow
- Build jobs for all components
- Test jobs (Rust, TypeScript, Anchor)
- Security scanning (cargo audit, npm audit)
- Docker deployment to ghcr.io
- Solana program deployment pipeline

Files changed: 16

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,14 +16,14 @@ tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
 # Web framework
 axum = { workspace = true, features = ["macros"] }
 tower = "0.5"
-tower-http = { version = "0.6", features = ["cors", "limit", "trace", "request-id"] }
+tower-http = { version = "0.6", features = ["cors", "limit", "trace", "request-id", "set-header", "compression-gzip"] }
 
 # Serialization
 serde = { workspace = true }
 serde_json = { workspace = true }
 
 # Database
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
 
 # Solana (required for SSS)
 anchor-client = { workspace = true }
@@ -37,6 +37,9 @@ openssl = { version = "0.10", features = ["vendored"] }
 
 # Encoding
 bs58 = "0.5"
+base64 = "0.22"
+hex = "0.4"
+sha2 = "0.10"
 
 # Authentication
 jsonwebtoken = "9"
@@ -50,8 +53,6 @@ tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 rand = "0.8"
-base64 = "0.22"
-hex = "0.4"
 
 # Configuration
 dotenvy = "0.15"
