--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@
 # Application version (used for Docker image tagging)
 VERSION=1.0.0
 
+# Environment: development, staging, production
+# REQUIRED in production - affects security settings
+ENVIRONMENT=development
+
 # Log level: trace, debug, info, warn, error
 LOG_LEVEL=info
 
@@ -36,12 +40,37 @@ BACKEND_PORT=3001
 
 # JWT Configuration
 # CHANGE THIS IN PRODUCTION! Use a secure random string (min 64 characters)
+# REQUIRED in production - application will fail to start without it
 JWT_SECRET=change_this_to_a_secure_random_string_in_production
 JWT_EXPIRY_SECS=86400
+
+# CSRF Secret for token generation
+# REQUIRED in production - application will fail to start without it
+# Generate with: openssl rand -base64 64
+CSRF_SECRET=change_this_to_a_secure_csrf_secret_in_production
 
 # Rate Limiting
 RATE_LIMIT_REQUESTS=100
 RATE_LIMIT_WINDOW_SECS=60
+
+# =============================================================================
+# CORS Configuration (IMPORTANT for Production)
+# =============================================================================
+# Comma-separated list of allowed origins
+# REQUIRED in production - application will fail to start without it
+# Examples:
+#   CORS_ORIGINS=https://app.example.com,https://admin.example.com
+#   CORS_ORIGINS=https://example.com
+# For development, defaults to localhost origins
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
+
+# =============================================================================
+# Security Configuration
+# =============================================================================
+# Enable HTTPS enforcement (checks X-Forwarded-Proto header)
+# Set to true in production behind a reverse proxy/load balancer
+# Default: true in production, false in development
+ENFORCE_HTTPS=false
 
 # =============================================================================
 # Solana Configuration
@@ -78,11 +107,23 @@ NGINX_HTTPS_PORT=443
 # =============================================================================
 # Uncomment and configure these for production deployment
 
+# Environment MUST be set to production
+# ENVIRONMENT=production
+
 # Use dedicated Solana RPC provider (recommended)
 # SOLANA_RPC_URL=https://your-rpc-provider.example.com
 
 # Use stronger JWT secret (generate with: openssl rand -base64 64)
-# JWT_SECRET=your_generated_secret_here
+# JWT_SECRET=your_generated_secret_here (min 32 characters)
+
+# Use strong CSRF secret (generate with: openssl rand -base64 64)
+# CSRF_SECRET=your_generated_csrf_secret_here (min 32 characters)
+
+# Configure allowed CORS origins
+# CORS_ORIGINS=https://your-frontend.com,https://admin.your-frontend.com
+
+# Enable HTTPS enforcement
+# ENFORCE_HTTPS=true
 
 # Configure Redis password
 # REDIS_PASSWORD=your_redis_password
@@ -93,13 +134,18 @@ NGINX_HTTPS_PORT=443
 # =============================================================================
 # Security Checklist for Production
 # =============================================================================
+# [ ] Set ENVIRONMENT=production
 # [ ] Change POSTGRES_PASSWORD to a strong random password
-# [ ] Change JWT_SECRET to a secure random string (64+ characters)
+# [ ] Set JWT_SECRET to a secure random string (64+ characters)
+# [ ] Set CSRF_SECRET to a secure random string (64+ characters)
+# [ ] Configure CORS_ORIGINS with your production domains
+# [ ] Set ENFORCE_HTTPS=true
 # [ ] Set REDIS_PASSWORD for Redis authentication
 # [ ] Configure SOLANA_RPC_URL to use a dedicated RPC provider
 # [ ] Set PROGRAM_ID to your deployed mainnet program
 # [ ] Enable HTTPS in nginx configuration
 # [ ] Configure proper SSL/TLS certificates
-# [ ] Review and restrict CORS settings in backend
 # [ ] Set up proper backup strategies for PostgreSQL
 # [ ] Configure firewall rules to restrict access
+# [ ] Review and rotate all secrets regularly
+
